Fixed Grid Spacing

--- a/main.css
+++ b/main.css
@@ -213,6 +213,10 @@ p {
   padding-bottom: 10vh;
 }
 
+.content.portfolio {
+  padding-left: 10vw;
+  padding-right: 10vw;
+}
 
 /* -----CLASS SPECIFICS----- */
 
@@ -224,8 +228,13 @@ p {
 .h2--vw {
   font-size: 4vw;
   text-align: right;
-  margin-bottom: 6vw;
+  margin-bottom: 5vw;
 }
+
+.p--end-spacing {
+  margin-bottom: 5vw;
+}
+
 
 .grid-item--about--item-2 h2 {
   margin-top: 0;
@@ -273,12 +282,19 @@ p {
 }
 .grid-container--portfolio {
   display: grid;
-  grid-gap: 7vw;
+  grid-gap: 5vw;
 }
 
-@media screen and (min-width: 65em) {
+@media screen and (min-width: 55em) {
   .grid-container--portfolio{
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: 4vw;
+  }
+}
+@media screen and (min-width: 70em) {
+  .grid-container--portfolio{
+    grid-gap: 3vw;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -317,33 +333,3 @@ button {
   width: 100%;
   height: auto;
 }
-
-
-/* .overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: var(--blue);
-}
-
-.container:hover .overlay {
-  opacity: 1;
-}
-
-.text {
-  color: var(--white);
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-} */
